[gd_scene load_steps=2 format=3 uid="uid://3xd4kkglwogk"]

[ext_resource type="Script" path="res://scenes/ui/dialogLoader/dialog_loader.gd" id="1_bxgyd"]

[node name="DialogLoader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxgyd")

[node name="LineEdit" type="LineEdit" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 1215.0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
placeholder_text = "Path to tsv or tres file"

[node name="FileLookupButton" type="Button" parent="LineEdit"]
offset_left = 1215.0
offset_top = 2.0
offset_right = 1271.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 30
text = "***"

[node name="ConvertButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.999
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Convert"

[node name="Label" type="RichTextLabel" parent="."]
offset_right = 1152.0
offset_bottom = 1020.0
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "Enter file path below"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(1920, 1020)
exclusive = false
content_scale_mode = 2
content_scale_aspect = 1
content_scale_factor = 1.5
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.tsv", "*.tres")

[node name="TestButton" type="Button" parent="."]
offset_left = 1632.0
offset_top = 1028.0
offset_right = 1791.0
offset_bottom = 1078.0
theme_override_font_sizes/font_size = 30
text = "TestDialog"

[node name="LoadButton" type="Button" parent="."]
offset_left = 1499.0
offset_top = 1028.0
offset_right = 1625.0
offset_bottom = 1078.0
theme_override_font_sizes/font_size = 30
text = "PreLoad"
